--- a/HomeWork.App/Views/HomePage.xaml
+++ b/HomeWork.App/Views/HomePage.xaml
@@ -10,7 +10,7 @@
     <VerticalStackLayout>
         <Label
             HorizontalOptions="Center"
-            Text="{Binding Welcome}"
+            Text="Welcome"
             VerticalOptions="Center" />
     </VerticalStackLayout>
 </ContentPage>
