--- a/HomeWork.App/Views/MainPage.xaml
+++ b/HomeWork.App/Views/MainPage.xaml
@@ -3,18 +3,31 @@
     x:Class="HomeWork.App.Views.MainPage"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:viewmodel="clr-namespace:HomeWork.App.ViewsModels"
+    x:DataType="viewmodel:MainPageModel"
     xmlns:local="clr-namespace:HomeWork.App.ViewsModels">
-    <ContentPage.BindingContext>
-        <local:MainPageModel />
-    </ContentPage.BindingContext>
 
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
 
-        <Grid />
-
+    <Grid RowDefinitions="80,auto">
+        <CollectionView
+            Grid.Row="1"
+            ItemsSource="{Binding ShowBars}"
+            SelectionMode="None">
+            <CollectionView.ItemTemplate>
+                <DataTemplate x:DataType="{x:Type x:}">
+                    <SwipeView>
+                        <Grid Padding="0,5">
+                            <Frame>
+                                <Label FontSize="24" Text="{Binding Name}" />
+                            </Frame>
+                        </Grid>
+                    </SwipeView>
+                </DataTemplate>
+            </CollectionView.ItemTemplate>
+        </CollectionView>
     </Grid>
+
+
+
 </ContentPage>
+
