--- a/HomeWork.App/Views/MainPage.xaml
+++ b/HomeWork.App/Views/MainPage.xaml
@@ -3,10 +3,9 @@
     x:Class="HomeWork.App.Views.MainPage"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:HomeWork.App.ViewsModels"
-    >
+    xmlns:local="clr-namespace:HomeWork.App.ViewsModels">
     <ContentPage.BindingContext>
-        <local:MainPageModel/>
+        <local:MainPageModel />
     </ContentPage.BindingContext>
 
 </ContentPage>
