--- a/HomeWork.App/Views/StaffsPage.xaml
+++ b/HomeWork.App/Views/StaffsPage.xaml
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="HomeWork.App.Views.StaffsPage"
-             xmlns:local="clr-namespace:HomeWork.App.ViewsModels"
-             Title="StaffsPage">
+<ContentPage
+    x:Class="HomeWork.App.Views.StaffsPage"
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:local="clr-namespace:HomeWork.App.ViewsModels"
+    Title="StaffsPage">
     <ContentPage.BindingContext>
-        <local:StaffsPageModel/>
+        <local:StaffsPageModel />
     </ContentPage.BindingContext>
 
     <CollectionView ItemsSource="{Binding StaffDtos}">
         <CollectionView.ItemTemplate>
             <DataTemplate>
-                <Label Text="{Binding Name}" FontSize="24"/>
+                <Label FontSize="24" Text="{Binding Name}" />
             </DataTemplate>
         </CollectionView.ItemTemplate>
     </CollectionView>
-    
+
 </ContentPage>
